k8s/infra/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: develop
  labels:
    environment: develop

---
apiVersion: v1
kind: Namespace
metadata:
  name: stage
  labels:
    environment: stage

---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    environment: prod
